Added generation of jlink + jpackage